--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "clone_disneyplus",
+  "name": "clone_disneyplus2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "gulp watch",
     "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,7 +13,9 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^6.0.1",
-    "sass": "^1.94.2"
+    "gulp-sourcemaps": "^3.0.0",
+    "sass": "^1.97.1"
   }
 }
